# vpn_bot

./: .dockerignore  .env.example  .gitignore  Agents.md  DEPLOY_AGENT.md  DOCS.md  Dockerfile  INSTALL.md  README.md  TZ.MD  alembic.ini  deploy.sh  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: audit.py  config.py  crypto.py  database.py  logging_config.py  main.py  models.py  schemas.py  security.py  tasks.py  wg.py
app/api/: audit.py  auth.py  deps.py  health.py  peers.py  requests.py  traffic.py  users.py
bot/: alerts.py  backend.py  main.py
frontend/: index.html
migrations/: env.py
nginx/: nginx.conf  proxy.conf
scripts/: migrate_encrypt_keys.py
tests/: conftest.py  test_admin_ux_alerts.py  test_admin_ux_api.py  test_admin_ux_backend_client.py  test_admin_ux_bot.py  test_admin_ux_wg.py  test_alerts.py  test_api_audit.py  test_api_auth.py  test_api_coverage.py  test_api_peers.py  test_api_peers_full.py  test_api_requests.py  test_api_traffic.py  test_api_users.py  test_audit.py  test_bot_backend.py  test_bot_coverage.py  test_bot_main.py  test_config.py  test_coverage_lift.py  test_crypto.py  test_deploy_script.py  test_deps.py  test_health.py  test_logging_config.py  test_migrate.py  test_models.py  test_schemas.py  test_security.py  test_speed_limit.py  test_tasks.py  test_wg.py
